[package]
name = "korros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
gloo = "0.8.0"
anyhow = "1.0.66"
futures-signals = "0.3.31"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "Element",
    "Text",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomTokenList",
    "DomStringMap",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlBodyElement",
    "HtmlDivElement",
    "HtmlButtonElement",
    "HtmlStyleElement",
    "HtmlSpanElement",
    "SvgsvgElement",
    "DocumentFragment",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
