[package]
name = "playground"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    "Window",
    "Document",
    "Element",
    "Text",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomTokenList",
    "DomStringMap",
    "MouseEvent",
    "KeyboardEvent",
] }
gloo = "0.8.0"
anyhow = "1.0.66"
futures-signals = "0.3.31"
korros = { path = "../korros" }
